<resources>
    <string name="app_name">Alimento Preview</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello">Hello!</string>
    <string name="greeting">Welcome member of Alimento. Login to continue!</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="destination_name">Destination Name</string>
    <string name="destination_address">Destination Address</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="done">done</string>
</resources>
